@@ -5,6 +5,8 @@ Bugfixes
 --------
 
 * Find substring in string instead of using `contains` in utils
+* Don't add semicolon in docinfo fields via CSS (caused duplicated
+  semicolons)
 
 New in v8.2.2
 =============
